--- a/src/style.sass
+++ b/src/style.sass
@@ -14,11 +14,11 @@ body
  margin: 0
  padding: 0
  font-family: 'Arvo', serif
- height: 4000px
  font-family: 'Noto Sans', sans-serif
 
 .NavMenu
   float: right
+  margin-right: 20px
 .Header
   background-image: url("./assets/Background.png")
   background-size: 100% 100%
@@ -31,9 +31,7 @@ ul
 
 li
   display: inline-block
-  padding: 10px
-  padding-right: 15px
-  padding-left: 15px
+  padding: 15px 30px 0px 30px
   font-size: 20px
 
 .navItem
@@ -110,18 +108,16 @@ a:hover
   margin-left: 240px
   color: $fiColor
 .projectsHandler
-  width: 75%
+  width: 80%
   margin-left: 10%
   margin-top: 55px
   height: 210px
-  overflow-x: hidden
-  overflow-y: hidden
   white-space: nowrap
 
 .project
  height: 190px
  border: 1px solid black
- width: 300px
+ width: 305px
  display: inline-block
  margin-left: 50px
 
@@ -143,3 +139,40 @@ a:hover
 #projectTwo
   background-image: url("./assets/projectTwo.png")
   background-size: 100% 100%
+.languageHandler
+  margin-left: 12.5%
+  margin-top: 55px
+  width: 72.5%
+  height: 600px
+  border: 0.5px solid rgba(190, 190, 190, 0.35)
+  box-shadow: 0px 0px 5px 1px #c7c7c7
+.pageSectionThree
+  height: 900px
+.LangTitle
+  position: absolute
+  width: 15%
+.languages
+  width: 90%
+  margin-left: 5%
+  margin-top: 45px
+  padding: 15px 0px 15px 0px
+  font-size: 24px
+  font-weight: 500
+  color: $fiColor
+.LevelBack
+  float: right
+  width: 500px
+  height: 20px
+  border: 0.5px solid grey
+  margin-right: 20px
+#note
+  float: right
+  margin-top: 50px
+  margin-right: -550px
+  color: $fiColor
+  font-size: 14px
+.footer
+  width: 100%
+  height: 200px
+  background-image: url(./assets/footerImage.png)
+  display: flex
