--- a/src/style.sass
+++ b/src/style.sass
@@ -57,7 +57,7 @@ a:hover
 #headerMainText
   position: absolute
   top: 40%
-  width: 40%
+  width: 50%
   left: 50%
   transform: translateX(-50%)
   font-size: 35px
@@ -113,7 +113,7 @@ a:hover
   margin-top: 55px
   height: 210px
   white-space: nowrap
-
+  overflow-y: hidden
 .project
  height: 190px
  border: 1px solid black
@@ -175,4 +175,6 @@ a:hover
   width: 100%
   height: 200px
   background-image: url(./assets/footerImage.png)
+  background-size: 100% 100%
+  background-repeat: no-repeat
   display: flex
