--- a/src/components/style.sass
+++ b/src/components/style.sass
@@ -20,7 +20,7 @@ body
   float: right
   margin-right: 20px
 .Header
-  background-image: url("./assets/Background.png")
+  background-image: url("../assets/Background.png")
   background-size: 100% 100%
   width: 100%
   height: 100vh
@@ -32,7 +32,7 @@ ul
 li
   display: inline-block
   padding: 15px 30px 0px 30px
-  font-size: 20px
+  font-size: 22px
 
 .navItem
   cursor: pointer
@@ -101,7 +101,7 @@ a:hover
   right: 15%
   margin-top: 80px
 .pageSectionOne
-  height: 1000px
+  height: 800px
 .pageSectionTwo
   height: 600px
 #pSTittle
@@ -134,10 +134,10 @@ a:hover
   outline: 0
   cursor: pointer
 #projectOne
-  background-image: url("./assets/projectOne.png")
+  background-image: url("../assets/projectOne.png")
   background-size: 100% 100%
 #projectTwo
-  background-image: url("./assets/projectTwo.png")
+  background-image: url("../assets/projectTwo.png")
   background-size: 100% 100%
 .languageHandler
   margin-left: 12.5%
@@ -174,7 +174,47 @@ a:hover
 .footer
   width: 100%
   height: 200px
-  background-image: url(./assets/footerImage.png)
+  background-image: url("../assets/footerImage.png")
   background-size: 100% 101%
   background-repeat: no-repeat
   display: flex
+.SiteMap
+  display: flex
+  margin-left: 150px
+  width: 50%
+.SM_Header
+  color: $fiColor
+.SM_Section
+  padding: 25px
+  margin-top: 40px
+.SM_Title
+  font-size: 20px
+  color: $thColor
+  text-align: center
+.SM_Header
+  position: absolute
+  left: 430px
+  margin-top: 20px
+  font-size: 22px
+.SM_UnderTitle
+  color: $frColor
+  text-align: center
+  margin-top: 10px
+  font-size: 13px
+.Copyright
+  color: white
+  float: right
+  font-size: 12px
+  font-style: italic
+  font-weight: lighter
+  position: absolute
+  right: 20px
+  margin-top: 170px
+.FT_Logo
+  margin-left: 70px
+  margin-top: 70px
+  cursor: pointer
+.FT_Logo:hover
+  opacity: 0.8
+.Logo
+  margin-left: 80px
