--- a/src/components/style.sass
+++ b/src/components/style.sass
@@ -202,7 +202,7 @@ a:hover
   margin-top: 10px
   font-size: 13px
 .Copyright
-  color: white
+  color: rgb(181, 181, 181)
   float: right
   font-size: 12px
   font-style: italic
