--- a/src/components/style.css
+++ b/src/components/style.css
@@ -146,12 +146,18 @@ a:hover {
 }
 
 .project {
-  height: 180px;
-  border: 1px solid black;
-  width: 320px;
+  height: 130px;
+  margin-top: 15px;
+  box-shadow: 0px 0px 5px 2px black;
+  width: 240px;
+  transition: all 0.5s ease;
   display: inline-block;
   margin-left: 40px;
   cursor: pointer;
+}
+.project:hover{
+  width: 340px;
+  height: 180px;
 }
 
 #nextButton {
