--- a/src/components/style.css
+++ b/src/components/style.css
@@ -123,17 +123,11 @@ a:hover {
   margin-top: 80px;
 }
 
-.pageSectionOne {
-  height: 800px;
-}
-
-.pageSectionTwo {
-  height: 600px;
-}
 
 #pSTittle {
   margin-left: 240px;
   color: #004e52;
+  font-size: 35px;
 }
 
 .projectsHandler {
@@ -203,8 +197,8 @@ a:hover {
           box-shadow: 0px 0px 5px 1px #c7c7c7;
 }
 
-.pageSectionThree {
-  height: 900px;
+.pageSection{
+ margin: 150px 0px 150px 0px;
 }
 
 .LangTitle {
@@ -310,4 +304,17 @@ a:hover {
 .Logo {
   margin-left: 80px;
 }
-/*# sourceMappingURL=style.css.map */
+.Product{
+  width: 75%;
+  box-shadow: inset 0px 0px 10px 1px #666666;
+  margin-left: 12.5%;
+  height: 375px;
+  margin-top: 100px;
+}
+
+#League_Title{
+text-align: center;
+color: #004e52;
+font-size: 30px;
+padding: 15px;
+}
