--- a/src/components/style.css
+++ b/src/components/style.css
@@ -306,7 +306,7 @@ a:hover {
 }
 .Product{
   width: 75%;
-  box-shadow: inset 0px 0px 10px 1px #666666;
+  box-shadow: inset 0px 0px 10px 1px #6666669d;
   margin-left: 12.5%;
   height: 375px;
   margin-top: 100px;
